Add Full Project Review Playbook and enhance domain topics reference
- Introduced a comprehensive Full Project Review Playbook to guide repository audits and improvements.
- Expanded the `domain-topics-reference.md` with detailed sections on JPMS modules and Java cheatsheets, including migration strategies and Spring Boot considerations.